--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-10 mt-5">
-                            <div>
-                                <h1 data-usal="slide-u duration-2000" class="text-center fw-bolder mb-5 mt-5">Innovative Business Solutions for Tomorrow</h1>
-                                <p data-usal="slide-u duration-2000" class="m-auto mb-5  text-center">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
+                            <div data-usal="split-item split-fade-u-0-200 split-delay-50 duration-1000">
+                                <h1 class="text-center fw-bolder mb-5 mt-5">Innovative Business Solutions for Tomorrow</h1>
+                                <p class="m-auto mb-5  text-center">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
                                     quam,
                                     feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
                             </div>
@@ -86,13 +86,13 @@
                     <div class="row justify-content-center mt-3">
                         <div class="col-lg-8 pt-5">
                             <div class="img-box mb-5">
-                                <div data-usal="slide-u duration-1000 delay-400" class="hero-img rounded-4 overflow-hidden">
+                                <div data-usal="split-item split-fade-u-0-200 split-delay-50 duration-1000" class="hero-img rounded-4 overflow-hidden">
                                     <img src="/images/about/about-15.webp" class="w-100 " alt="">
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row py-5 hero-stats ">
+                    <div class="row py-5 hero-stats" data-usal="split-item split-fade-u-0-300 split-delay-50 duration-1000">
                         <div class="col-12 col-md-6 col-lg-3 px-3 mb-3 mb-lg-0">
                             <div class="box">
                                 <div class="stat-icon">
@@ -134,6 +134,81 @@
             </div>
         </div>
         <!-- End Landing Section  -->
+        <div class="about-section">
+            <div class="container">
+                <div class="about-content">
+                    <div class="main-heading" data-usal="split-item split-fade-u-500 split-delay-100 threshold-100 ease-in-out">
+                        <span>About</span>
+                        <h1>About</h1>
+                        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+                    </div>
+                    <div class="content">
+                        <div class="row align-items-center">
+                            <div class="col-12  col-lg-6 px-5 p position-relative mb-5 mb-lg-0">
+                                <div class="image-box">
+                                    <div class="rounded-4 overflow-hidden">
+                                        <img class="w-100" src="/images/about/about-square-15.webp" alt="">
+                                    </div>
+                                </div>
+                                <div class="experience-box">
+                                    <div class="years">15+</div>
+                                    <div class="text">Years of Experience</div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-lg-6 px-5">
+                                <h1 class="features-title">
+                                    Empowering Businesses Through Innovative Solutions
+                                </h1>
+                                <p>Agile methodologies drive our collaborative approach, ensuring optimal outcomes across
+                                    diverse industry verticals.</p>
+                                <div class="features-list">
+                                    <div class="features-item d-flex gap-4 mb-5">
+                                        <div class="icon">
+                                            <i class="fa-solid fa-users"></i>
+                                        </div>
+                                        <div class="info">
+                                            <h4 class="fw-bolder">Expert Consulting</h4>
+                                            <p>In today's dynamic market landscape, strategic implementation of emerging
+                                                technologies drives competitive advantage and
+                                                sustainable growth trajectories.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="features-item d-flex gap-4 mb-5">
+                                        <div class="icon">
+                                            <i class="fa-solid fa-users"></i>
+                                        </div>
+                                        <div class="info">
+                                            <h4 class="fw-bolder">Expert Consulting</h4>
+                                            <p>In today's dynamic market landscape, strategic implementation of emerging
+                                                technologies drives competitive advantage and
+                                                sustainable growth trajectories.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="features-item d-flex gap-4 mb-5">
+                                        <div class="icon">
+                                            <i class="fa-solid fa-users"></i>
+                                        </div>
+                                        <div class="info">
+                                            <h4 class="fw-bolder">Expert Consulting</h4>
+                                            <p>In today's dynamic market landscape, strategic implementation of emerging
+                                                technologies drives competitive advantage and
+                                                sustainable growth trajectories.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="links  d-flex align-items-center justify-content-center gap-3 flex-wrap mb-5">
+                                        <a href="" class="the-btn scondary-btn d-flex align-items-center gap-1"><span>Learn More</span></a>
+                                        <a href="" class="the-btn primary-btn">Get Started</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <script src="https://cdn.usal.dev/latest"></script>
         <script type="module" src="/src/main.js"></script>
     </body>
