--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                 <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-10 mt-5">
-                            <div data-usal="split-item split-fade-u-0-200 split-delay-50 duration-1000">
+                            <div data-usal="split-item split-fade-u-0-200 split-delay-50 duration-1200">
                                 <h1 class="text-center fw-bolder mb-5 mt-5">Innovative Business Solutions for Tomorrow</h1>
                                 <p class="m-auto mb-5  text-center">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
                                     quam,
                                     feugiat vitae, ultricies eget, tempor sit amet, ante.</p>
                             </div>
-                            <div class="links  d-flex align-items-center justify-content-center gap-3 flex-wrap mb-5">
+                            <div data-usal="split-item split-fade-u-0-300 split-delay-50 duration-1000" class="links  d-flex align-items-center justify-content-center gap-3 flex-wrap mb-5">
                                 <a href="" class="the-btn primary-btn">Start Your Journey</a>
                                 <a href="" class="the-btn scondary-btn d-flex align-items-center gap-1"><i class="fa-regular fa-circle-play fs-4"></i><span>Watch Demo</span></a>
                             </div>
@@ -86,13 +86,13 @@
                     <div class="row justify-content-center mt-3">
                         <div class="col-lg-8 pt-5">
                             <div class="img-box mb-5">
-                                <div data-usal="split-item split-fade-u-0-200 split-delay-50 duration-1000" class="hero-img rounded-4 overflow-hidden">
+                                <div data-usal="split-item split-fade-u-0-100 split-delay-50 duration-1200" class="hero-img rounded-4 overflow-hidden">
                                     <img src="/images/about/about-15.webp" class="w-100 " alt="">
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row py-5 hero-stats" data-usal="split-item split-fade-u-0-300 split-delay-50 duration-1000">
+                    <div class="row py-5 hero-stats" data-usal="split-item split-fade-u-0-100 split-delay-50 duration-1500">
                         <div class="col-12 col-md-6 col-lg-3 px-3 mb-3 mb-lg-0">
                             <div class="box">
                                 <div class="stat-icon">
@@ -137,14 +137,14 @@
         <div class="about-section">
             <div class="container">
                 <div class="about-content">
-                    <div class="main-heading" data-usal="split-item split-fade-u-500 split-delay-100 threshold-100 ease-in-out">
+                    <div class="main-heading" data-usal="split-item split-fade-u-500 duration-1000 split-delay-100 threshold-100 ease-in-out">
                         <span>About</span>
                         <h1>About</h1>
                         <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
                     </div>
                     <div class="content">
                         <div class="row align-items-center">
-                            <div class="col-12  col-lg-6 px-5 p position-relative mb-5 mb-lg-0">
+                            <div data-usal="split-item split-zoomin-u-0-200-0 split-delay-50 duration-1800" class="col-12  col-lg-6 px-5 p position-relative mb-5 mb-lg-0">
                                 <div class="image-box">
                                     <div class="rounded-4 overflow-hidden">
                                         <img class="w-100" src="/images/about/about-square-15.webp" alt="">
@@ -155,7 +155,7 @@
                                     <div class="text">Years of Experience</div>
                                 </div>
                             </div>
-                            <div class="col-12 col-lg-6 px-5">
+                            <div class="col-12 col-lg-6 px-5" data-usal="split-item split-zoomin-l-200-50-0 split-delay-1200 duration-800">
                                 <h1 class="features-title">
                                     Empowering Businesses Through Innovative Solutions
                                 </h1>
@@ -186,7 +186,7 @@
                                             </p>
                                         </div>
                                     </div>
-                                    <div class="features-item d-flex gap-4 mb-5">
+                                    <div class="features-item d-flex gap-4 mb-5" >
                                         <div class="icon">
                                             <i class="fa-solid fa-users"></i>
                                         </div>
