--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                     <div class="text">Years of Experience</div>
                                 </div>
                             </div>
-                            <div class="col-12 col-lg-6 px-5" data-usal="split-item split-zoomin-l-200-50-0 split-delay-1200 duration-800">
+                            <div class="col-12 col-lg-6 px-5" data-usal="split-item split-zoomin-l-200-50-0 split-delay-1000 duration-800">
                                 <h1 class="features-title">
                                     Empowering Businesses Through Innovative Solutions
                                 </h1>
@@ -202,6 +202,97 @@
                                         <a href="" class="the-btn scondary-btn d-flex align-items-center gap-1"><span>Learn More</span></a>
                                         <a href="" class="the-btn primary-btn">Get Started</a>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="service-section">
+            <div class="container">
+                <div class="service-content">
+                    <div class="main-heading"
+                        data-usal="split-item split-fade-u-500 duration-1000 split-delay-100 threshold-100 ease-in-out">
+                        <span>Services</span>
+                        <h1>Services</h1>
+                        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit
+                        </p>
+                    </div>
+                    <div class="row" data-usal="split-item split-fade-u-0-100 split-delay-50 duration-1500">
+                        <div class="col-12 col-lg-6 mb-3">
+                            <div class="service-box">
+                                <div class="service-icon">
+                                    <i class="fa-solid fa-code"></i>
+                                </div>
+                                <div class="service-info">
+                                    <span class="service-number">01</span>
+                                    <h1>Custom Application Development</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla condimentum tortor sem, in
+                                        semper nisl bibendum eu. Duis pellentesque.</p>
+                                    <a href="#">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6 mb-3">
+                            <div class="service-box">
+                                <div class="service-icon">
+                                    <i class="fa-solid fa-code"></i>
+                                </div>
+                                <div class="service-info">
+                                    <span class="service-number">02</span>
+                                    <h1>Custom Application Development</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla condimentum tortor sem, in
+                                        semper nisl bibendum eu. Duis pellentesque.</p>
+                                    <a href="#">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" data-usal="split-item split-fade-u-0-100 split-delay-50 duration-1500">
+                        <div class="col-12 col-lg-6 mb-3 mb-lg-0">
+                            <div class="service-box">
+                                <div class="service-icon">
+                                    <i class="fa-solid fa-code"></i>
+                                </div>
+                                <div class="service-info">
+                                    <span class="service-number">03</span>
+                                    <h1>Custom Application Development</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla condimentum tortor sem, in
+                                        semper nisl bibendum eu. Duis pellentesque.</p>
+                                    <a href="#">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-6 mb-3 mb-lg-0">
+                            <div class="service-box">
+                                <div class="service-icon">
+                                    <i class="fa-solid fa-code"></i>
+                                </div>
+                                <div class="service-info">
+                                    <span class="service-number">04</span>
+                                    <h1>Custom Application Development</h1>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla condimentum tortor sem, in
+                                        semper nisl bibendum eu. Duis pellentesque.</p>
+                                    <a href="#">Learn More <i class="fa-solid fa-arrow-right"></i></a>
+                                </div>
+                            </div>
+                        </div>
+        
+                    </div>
+                    <div class="row" data-usal="split-item split-fade-u-0-100 split-delay-50 duration-1500">
+                        <div class="cta-box col-lg-8 m-auto my-5">
+                            <div class="box d-flex align-items-center gap-3" >
+                                <div class="box-img">
+                                    <div class="img" data-usal="zoomin-20-0-100 duration-800 delay-400">
+                                        <img src="/images/services/services-8.webp" alt="">
+                                    </div>
+                                </div>
+                                <div class="box-info" data-usal="fade-l-20-0-100 duration-800 delay-200">
+                                    <h3>Need a Custom Solution?</h3>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis.
+</p>
+                                    <a href="" class="the-btn btn-bg-white">Schedule a Consultation</a>
                                 </div>
                             </div>
                         </div>
