--- a/index.html
+++ b/index.html
@@ -371,12 +371,12 @@
         <div class="testimonial-section section-padding">
             <div class="container">
                 <div class="testimonial-content">
-                    <div class="main-heading" data-usal="fade-u-200-100-0 duration-1000 ease-in-out">
+                    <div class="main-heading" data-usal="fade-u-100-50-0 duration-1000 ease-in-out">
                         <span>Testimonials</span>
                         <h1>Testimonials</h1>
                         <p> Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
                     </div>
-                    <div class="rwo swiper testimonialSwiper" data-usal="fade-u-200-100-0 duration-1000 ease-in-out">
+                    <div class="rwo swiper testimonialSwiper" data-usal="fade-u-00-50-0 duration-1000 ease-in-out">
                         <div class="col swiper-wrapper">
                             <div class="testi-box swiper-slide">
                                 <div class="top-content">
@@ -781,6 +781,229 @@
                 </div>
                 </div>
                 </div>
+                </div>
+                <div class="pricing-section section-padding">
+                    <div class="container">
+                        <div class="main-heading" data-usal="fade-u-200-100-0 duration-1000 ease-in-out">
+                            <span>Pricing</span>
+                            <h1>Pricing</h1>
+                            <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+                        </div>
+                        <div class="pricing-content">
+                            <div class="row justify-content-center"
+                                data-usal="split-item split-zoomin-u-200-50-0 split-delay-600 duration-800">
+                                <div class="col-lg-4 col-md-6 mb-3">
+                                    <div class="plan-box">
+                                        <div class="plan-content">
+                                            <h2>Basic</h2>
+                                            <h4><sup>$</sup><span>19</span>/ month</h4>
+                                            <ul class="pt-3 pb-3">
+                                                <li class="valid"><i class="fa-solid fa-circle-check"></i><span>Donec volutpat metus in
+                                                        erat</span>
+                                                </li>
+                                                <li class="valid"><i class="fa-solid fa-circle-check"></i><span>Vestibulum ut erat
+                                                        consectetur</span>
+                                                </li>
+                                                <li class="valid"><i class="fa-solid fa-circle-check"></i><span>Curabitur pretium orci
+                                                        sed metus</span>
+                                                </li>
+                                                <li class="invalid"><i class="fa-solid fa-circle-xmark"></i><span>Vivamus tincidunt
+                                                        risus ipsum</span>
+                                                </li>
+                                                <li class="invalid"><i class="fa-solid fa-circle-xmark"></i><span>Nullam lobortis nulla
+                                                        in diam</span>
+                                                </li>
+                                            </ul>
+                                            <a href="" class="the-btn primary-btn m-auto fs-6">Choose Plan</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 mb-3">
+                                    <div class="plan-box pro">
+                                        <div class="plan-content">
+                                            <h2>Pro</h2>
+                                            <h4><sup>$</sup><span>49</span>/ month</h4>
+                                            <ul class="pt-3 pb-3">
+                                                <li class="valid"><i class="fa-solid fa-circle-check"></i><span>Donec volutpat metus in
+                                                        erat</span>
+                                                </li>
+                                                <li class="valid"><i class="fa-solid fa-circle-check"></i><span>Vestibulum ut erat
+                                                        consectetur</span>
+                                                </li>
+                                                <li class="valid"><i class="fa-solid fa-circle-check"></i><span>Curabitur pretium orci
+                                                        sed metus</span>
+                                                </li>
+                                                <li class="valid"><i class="fa-solid fa-circle-check"></i><span>Vivamus tincidunt
+                                                        risus ipsum</span>
+                                                </li>
+                                                <li class="invalid"><i class="fa-solid fa-circle-xmark"></i><span>Nullam lobortis nulla
+                                                        in diam</span>
+                                                </li>
+                                            </ul>
+                                            <a href="" class="the-btn primary-btn m-auto fs-6">Choose Plan</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 col-md-6 mb-3">
+                                    <div class="plan-box">
+                                        <div class="plan-content">
+                                            <h2>Enterprise</h2>
+                                            <h4><sup>$</sup><span>19</span>/ month</h4>
+                                            <ul class="pt-3 pb-3">
+                                                <li class="valid"><i class="fa-solid fa-circle-check"></i><span>Donec volutpat metus in
+                                                        erat</span>
+                                                </li>
+                                                <li class="valid"><i class="fa-solid fa-circle-check"></i><span>Vestibulum ut erat
+                                                        consectetur</span>
+                                                </li>
+                                                <li class="valid"><i class="fa-solid fa-circle-check"></i><span>Curabitur pretium orci
+                                                        sed metus</span>
+                                                </li>
+                                                <li class="valid"><i class="fa-solid fa-circle-check"></i><span>Vivamus tincidunt
+                                                        risus ipsum</span>
+                                                </li>
+                                                <li class="valid"><i class="fa-solid fa-circle-check"></i><span>Nullam lobortis nulla
+                                                        in diam</span>
+                                                </li>
+                                            </ul>
+                                            <a href="" class="the-btn primary-btn m-auto fs-6">Choose Plan</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="faq-section section-padding">
+                    <div class="container">
+                        <div class="faq-content">
+                            <div class="row">
+                                <div class="col-lg-10 m-auto mb-3" data-usal="fade-u-200-100-0 duration-1000 ease-in-out">
+                                    <div class="faq-wrapper">
+                                        <div class="faq-item">
+                                            <div class="faq-header">
+                                                <div class="faq-icon"><i class="fa-regular fa-circle-question"></i></div>
+                                                <h4 class="m-0">Mauris blandit aliquet elit, eget tincidunt nibh pulvinar?</h4>
+                                                <div class="faq-toggle">
+                                                    <i class="fa-solid fa-plus"></i>
+                                                    <i class="fa-solid fa-minus"></i>
+                                                </div>
+                                            </div>
+                                            <div class="faq-content">
+                                                <div>
+                                                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac
+                                                        turpis
+                                                        egestas. Vestibulum tortor quam,
+                                                        feugiat vitae, ultricies eget, tempor sit amet, ante.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-10 m-auto mb-3" data-usal="fade-u-200-100-0 duration-1000 ease-in-out">
+                                    <div class="faq-wrapper">
+                                        <div class="faq-item">
+                                            <div class="faq-header">
+                                                <div class="faq-icon"><i class="fa-regular fa-circle-question"></i></div>
+                                                <h4 class="m-0">Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem?</h4>
+                                                <div class="faq-toggle">
+                                                    <i class="fa-solid fa-plus"></i>
+                                                    <i class="fa-solid fa-minus"></i>
+                                                </div>
+                                            </div>
+                                            <div class="faq-content">
+                                                <div>
+                                                    <p>Donec rutrum congue leo eget malesuada. Sed porttitor lectus nibh. Vestibulum ac
+                                                        diam sit amet quam vehicula elementum
+                                                        sed sit amet dui. Proin eget tortor risus. Curabitur aliquet quam id dui posuere
+                                                        blandit.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-10 m-auto mb-3" data-usal="fade-u-200-100-0 duration-1000 ease-in-out">
+                                    <div class="faq-wrapper">
+                                        <div class="faq-item">
+                                            <div class="faq-header">
+                                                <div class="faq-icon"><i class="fa-regular fa-circle-question"></i></div>
+                                                <h4 class="m-0">Vestibulum ante ipsum primis in faucibus orci luctus?</h4>
+                                                <div class="faq-toggle">
+                                                    <i class="fa-solid fa-plus"></i>
+                                                    <i class="fa-solid fa-minus"></i>
+                                                </div>
+                                            </div>
+                                            <div class="faq-content">
+                                                <div>
+                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                                        incididunt ut labore et dolore magna
+                                                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-10 m-auto mb-3" data-usal="fade-u-200-100-0 duration-1000 ease-in-out">
+                                    <div class="faq-wrapper">
+                                        <div class="faq-item">
+                                            <div class="faq-header">
+                                                <div class="faq-icon"><i class="fa-regular fa-circle-question"></i></div>
+                                                <h4 class="m-0">Nulla facilisi morbi tempus iaculis urna id volutpat?</h4>
+                                                <div class="faq-toggle">
+                                                    <i class="fa-solid fa-plus"></i>
+                                                    <i class="fa-solid fa-minus"></i>
+                                                </div>
+                                            </div>
+                                            <div class="faq-content">
+                                                <div>
+                                                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+                                                        doloremque laudantium. Totam rem aperiam,
+                                                        eaque ipsa quae ab illo inventore veritatis.
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-10 m-auto mb-3" data-usal="fade-u-200-100-0 duration-1000 ease-in-out">
+                                    <div class="faq-wrapper">
+                                        <div class="faq-item">
+                                            <div class="faq-header">
+                                                <div class="faq-icon"><i class="fa-regular fa-circle-question"></i></div>
+                                                <h4 class="m-0">Praesent sapien massa, convallis a pellentesque nec?</h4>
+                                                <div class="faq-toggle">
+                                                    <i class="fa-solid fa-plus"></i>
+                                                    <i class="fa-solid fa-minus"></i>
+                                                </div>
+                                            </div>
+                                            <div class="faq-content">
+                                                <div>
+                                                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
+                                                        praesentium voluptatum deleniti atque corrupti
+                                                        quos dolores et quas molestias excepturi sint.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-section">
+                    <div class="container">
+                        <div class="main-heading" data-usal="fade-u-200-100-0 duration-1000 ease-in-out">
+                            <span>Contact</span>
+                            <h1>Contact</h1>
+                            <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+                        </div>
+                
+                        <div class="contact-content"></div>
+                    </div>
                 </div>
         <script src="https://cdn.usal.dev/latest"></script>
         <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@12/swiper-bundle.min.js"></script> -->
